# SmileEditor

./: CMakeLists.txt  CScriptCreator.py  SmileEditor  SmileEditor.cpp
.cache/clangd/index/: BasicWindow.cpp.2ECB3C588B78C9C1.idx  Examples.hpp.FC7B41730FE20AA4.idx  SmileEditor.cpp.5786A25E3F41D281.idx
include/: CScriptManager.hpp  DynamicScriptLoader.hpp  Editor.hpp  FileManager.hpp  SmileEditor.hpp
src/: CScriptManager.cpp  DynamicScriptLoader.cpp  Editor.cpp  FileManager.cpp
